--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
-    font-family: "sans-serif";
+    font-family: 'Roboto', sans-serif;
 }
 
 /* ... */
@@ -13,17 +13,19 @@ header
 {
     background-color: rgb(210, 219, 226);
     width: 100%;
-    height: 6em;
+    height: 10em;
     display: flex;
     justify-content: space-around;
     align-items: center;
     border-bottom: 2px black solid;
-    box-shadow: black 0 5px 15px;
+    box-shadow: black 0 1px 0.5em;
+    position: relative;
+    z-index: 2;
 }
 #logo
 {
-    width: 7em;
-    height: 5.5em;
+    width: 10em;
+    height: auto;
 }
 #btn_burger
 {
@@ -32,6 +34,7 @@ header
 nav
 {
     width: 85%;
+    font-size: 1.5em;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -51,17 +54,20 @@ nav a,nav a:visited
 .section_1
 {
     width: 100%;
-    height: 35em;
+    height: 40em;
     display: flex;
     align-items: center;
     justify-content: space-around;
     background: rgb(159,160,160);
     background: linear-gradient(351deg, rgba(159,160,160,1) 0%, rgba(13,50,96,1) 72%);
+    position: relative;
+    z-index: 1;
+    box-shadow: black 0 1px 0.5em;
 }
 .CDA
 {
-    width: 20em;
-    font-size: 1.5em;
+    width: 23em;
+    font-size: 2em;
     color: aliceblue;
     text-shadow: black 1px 1px 5px;
     text-align: center;
@@ -71,17 +77,19 @@ nav a,nav a:visited
 }
 .CDA h1
 {
-    font-size: 2em;
+    font-size: 2.5em;
     margin-bottom: 1em;
+    font-family: 'Audiowide', cursive;
 }
 .CDA h1 span
 {
+    font-family: 'Audiowide', cursive;
     color: rgb(253, 138, 105);
 }
 .reunion
 {
-    width: 45em;
-    height: 25em;
+    width: 55em;
+    height: auto;
 }
 #test
 {
@@ -96,7 +104,7 @@ nav a,nav a:visited
 {
     background: rgb(209, 214, 218);
     width: 100%;
-    height: 103em;
+    height: 115em;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -105,18 +113,19 @@ nav a,nav a:visited
 {
     width: 100%;
     height: auto;
-    padding: 5em;
+    padding: 9em;
     display: grid;
     align-items: center;
-    gap: 2em;
+    gap: 1em;
     grid-template-columns: repeat(3,1fr);
     grid-template-rows: repeat(3,1fr);
 }
 .decouverte p
 {
     font-size: 2em;
+    font-weight: 700;
     width: 9em;
-    height: 8em;
+    height: 9em;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -125,7 +134,7 @@ nav a,nav a:visited
     border-radius: 20px;
     box-shadow: 15px 15px 4px rgb(197, 200, 203);
     color: rgb(255, 255, 255);
-    text-shadow: 1px 1px 5px black;
+    text-shadow: 1px 1px 10px black;
 }
 .box5
 {
@@ -182,29 +191,31 @@ aside img
 footer
 {
     width: 100%;
-    height: 25em;
+    height: 40em;
     background: rgb(159,160,160);
-    background: linear-gradient(351deg, rgba(159,160,160,1) 0%, rgba(13,50,96,1) 72%);
-    
+    background: linear-gradient(160deg, rgba(159,160,160,1) 0%, rgba(13,50,96,1) 72%);
     display: flex;
     align-items: center;
     justify-content: space-around;
 }
 .contactez
 {
-    font-size: 1.2em;
+    font-weight: 700;
+    font-size: 2em;
     color: aliceblue;
-    text-shadow: black 1px 1px 5px;
+    text-shadow: rgb(88, 88, 88) 3px 4px 3px;
     display: flex;
     flex-direction: column;
     padding-top: 1em;
-    padding-right: 15em;
-    border-right: #ffffff 2px solid;
 }
 .contactez h2
 {
     text-decoration: underline;
     margin-bottom: 1em;
+}
+.email, .tel, .adresse
+{
+    font-style: normal;
 }
 .email, .tel
 {
@@ -229,7 +240,7 @@ footer
 {
     display: flex;
     text-align: center;
-    margin: 0.5em;
+    margin-right: 0.8em;
     width: 2.5em;
     height: 2.5em;
     background-color: rgb(255, 255, 255);
@@ -240,22 +251,27 @@ footer
     color: rgb(17, 73, 133);
     margin: auto;
     text-shadow: none;
-    font-size: 1.5em;
+    font-size: 1.3em;
 }
-
+/* border-left: #ffffff 2px solid; */
+hr
+{
+    height: 25em;
+    color: #ffffff;
+}
 form
 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     font-size: 1.8em;
-    width: 30em;
-    height: 12em;
+    width: 20em;
+    height: 17em;
     color: rgb(240, 248, 255);
     background: rgb(69,99,136);
     background: linear-gradient(169deg, rgba(69,99,136,1) 0%, rgba(13,50,96,1) 50%);
-    box-shadow: 10px 10px 4px #53587a;
+    box-shadow: 10px 10px 4px rgba(242, 135, 107, 0.3);
     border-radius: 10px;
 }
 .formulaire
@@ -265,54 +281,131 @@ form
 }
 #nom_prenom, #Entreprise, #Email
 {
-    width: 50em;
-    height: 3em;
-    border-radius: 5px;
-    border: none;
-}
-#btn_envoyer
-{
-    width: 50em;
+    width: 40em;
     height: 3.5em;
     border-radius: 5px;
     border: none;
-    margin-top: 1em;
+    padding-left: 10px;
+}
+#btn_envoyer
+{
+    width: 18.5em;
+    margin-bottom: 1em;
+    border: #ffffff 1px solid;
+    height: 2em;
+    border-radius: 5px;
     background: rgb(242, 135, 107);
     color: aliceblue;
+    font-size: 1em;
     text-shadow: black 1px 1px 5px;
-    size: 2em;
 }
 
-@media all and (max-width:1920px)
+
+@media screen and (max-width:1280px)
 {
+    header
+    {
+        height: 8em;
+        width: 100%;
+    }
+    nav
+    {
+        font-size: 1.1em;
+    }
+    #logo
+    {
+        width: 8em;
+    }
+
+    /* ... */
+    
+    .section_1
+    {
+        width: 100%;
+        height: 25em;
+    }
+    .CDA
+    {
+        width: 18em;
+    }
+    .CDA p
+    {
+        font-size: 0.8em;
+    }
+    .CDA h1
+    {
+        font-size: 1.5em;
+    }
+    .reunion
+    {
+        width: 30em;
+    }
+
+    /* ... */
+
     .section_2
     {
-        height: 80em;
+        height: 88em;
+        width: 100%;
+    }
+    .decouverte
+    {
+        padding: 5em;
+        gap: 2em;
     }
     .decouverte p
     {
         width: 10em;
-        font-size: 1.4em;
+        height: 10em;
+        font-size: 1.3em;
+
+    }
+    .decouverte h2
+    {
+        font-size: 1.8em;
     }
     aside img
     {
         width: 75em;
     }
+
+    /* ... */
+
+    footer
+    {
+        width: 100%;
+        height: 30em;
+    }
+    .contactez
+    {
+        font-size: 1.2em;
+    }
+    hr
+    {
+        position: relative;
+        left: 8%;
+        height: 18em;
+    }
+
     form
     {
-        width: 20em;
+        width: 17em;
+        height: 12.9em;
     }
     .formulaire
     {
-        font-size: 0.9em;
+        font-size: 0.8em;
     }
     #nom_prenom, #Entreprise, #Email
     {
-        width: 40em;
+        width: 31em;
+        height: 3em;
     }
     #btn_envoyer
     {
-        width: 40em;
+        width: 18em;
+        height: 1.8em;
+        font-size: 0.8em;
     }
 }
 @media screen and (max-width: 720px)
