--- a/style.css
+++ b/style.css
@@ -86,6 +86,10 @@ nav a,nav a:visited
     font-family: 'Audiowide', cursive;
     color: rgb(253, 138, 105);
 }
+.tel
+{
+    display: none;
+}
 .reunion
 {
     width: 55em;
@@ -176,10 +180,12 @@ nav a,nav a:visited
 {
     background: rgb(170, 173, 173);
 }
-
-aside img
+#diaMobile
 {
-    
+    display: none;
+}
+.diagramme
+{
     width: 90em;
     height: auto;
     border-radius: 20px;
@@ -227,10 +233,15 @@ footer
 {
     text-decoration: underline;
 }
+#socTel
+{
+    display: none;
+}
 .social
 {
     display: flex;
     width: 100%;
+    justify-content: space-around;
 }
 .social a, .social a:visited
 {
@@ -240,7 +251,6 @@ footer
 {
     display: flex;
     text-align: center;
-    margin-right: 0.8em;
     width: 2.5em;
     height: 2.5em;
     background-color: rgb(255, 255, 255);
@@ -364,7 +374,7 @@ form
     {
         font-size: 1.8em;
     }
-    aside img
+    .diagramme
     {
         width: 75em;
     }
@@ -477,17 +487,169 @@ form
         margin-bottom: 0.5em;
         font-size: 2em;
     }
-    
-   
+    .pc
+    {
+        display: none;
+    }
+    .tel
+    {
+        display: block;
+    }
     .reunion
     {
         width: 100%;
-        margin-top: 2em;
+        margin-top: 1em;
     }
     #test
     {
-        margin-left: 10%;
-        width: 80%;
+        margin-left: 5%;
+        width: 90%;
         height: auto;
+    }
+
+    /* ... */
+
+    .section_2
+    {
+        width: 100%;
+        height: 132em;
+    }
+    .decouverte
+    {
+        padding: 1.5em;
+        /* grid-template-rows: repeat(9,1fr); */
+        grid-template-rows: 1fr 1fr 1fr 2fr 1fr 1fr;
+        gap: 1.5em;
+    }
+    .decouverte p
+    {
+        width: 7.5em;
+        height: 7.5em;
+    }
+    .box5
+    {
+        width: 12em;
+        height: 3.5em;
+        text-align: center;
+        grid-row: 1/2;
+        grid-column: 1/3;
+        color: rgb(108, 117, 125);
+        background: rgba(, 0.2);
+    }
+
+
+    .box1
+    {
+        grid-column: 1/2;
+        grid-row: 2/3;
+    }
+    .box3
+    {
+        grid-column: 1/2;
+        grid-row: 3/4;
+    }
+    .box6
+    {    
+        grid-column: 1/2;
+        grid-row: 5/6;
+    }
+    .box7
+    {    
+        grid-column: 1/2;
+        grid-row: 6/7;
+    }
+    
+    
+    .box2
+    {
+        grid-column: 2/3;
+        grid-row: 2/4;
+    }
+    .box4
+    {
+        grid-column: 2/3;
+        grid-row: 2/5;
+    }
+    .box8
+    {    
+        grid-column: 2/3;
+        grid-row: 4/7;
+    }
+    .box9
+    {    
+        grid-column: 2/3;
+        grid-row: 5/7;
+    }
+    
+    #diaPc
+    {
+        display: none;
+    }
+    #diaMobile
+    {
+        display: block;
+    }
+    .diagramme
+    {
+        width: 20em;
+        height: auto;
+        margin-top: 2.5em;
+    }
+    /* ... */
+
+    footer
+    {
+        width: 100%;
+        height: 60em;
+        flex-direction: column;
+        background: rgb(159,160,160);
+        background: linear-gradient(160deg, rgb(63, 81, 104) 0%, rgba(13,50,96,1) 72%);
+
+    }
+    .contactez h2
+    {
+        font-size: 0.9em;
+    }
+    .contactez:not(.contactez  h2)
+    {
+        font-size: 1.5em;
+        text-align: center;
+    }
+    .social
+    {
+        flex-direction: row;
+        justify-content: space-around;
+    }
+    #socTel
+    {
+        display: block;
+    }
+    #socPc
+    {
+        display: none;
+    }
+    .icone
+    {
+        margin: 0;
+    }
+    hr
+    {
+        display: none;
+    }
+    form
+    {
+        padding: 0;
+        width: 12em;
+        height: 15em;
+    }
+    #nom_prenom, #Entreprise, #Email
+    {
+        width: 24em;
+        border-radius: 5px 5px 0px 0px;
+    }
+    #btn_envoyer
+    {
+        width: 14em;
+        height: 3em;
     }
 }
