--- a/style.css
+++ b/style.css
@@ -450,7 +450,7 @@ form
     {
         display: block;
         position: absolute;
-        top: 15%;
+        top: 6.8em;
         left: 0%;
         display: flex;
         flex-direction: column;
@@ -458,9 +458,10 @@ form
         align-items: center;
         background: white;
         opacity: 0.9;
-        border: black 2px solid;
         width: 100%;
-        height: 80%;
+        height: 40em;
+        color: black;
+        font-weight: 700;
     }
     
     /* ... */
@@ -534,7 +535,8 @@ form
         grid-row: 1/2;
         grid-column: 1/3;
         color: rgb(108, 117, 125);
-        background: rgba(, 0.2);
+        background: rgba(108, 117, 125, 0.2);
+        border: 1px rgb(108, 117, 125) solid;
     }
 
 
@@ -622,7 +624,7 @@ form
     }
     #socTel
     {
-        display: block;
+        display: flex;
     }
     #socPc
     {
@@ -631,6 +633,12 @@ form
     .icone
     {
         margin: 0;
+        width: 4.5em;
+        height: 4.5em;
+    }
+    .fa-brands
+    {
+        font-size: 3em;
     }
     hr
     {
